# rpg-tool

./: .gitignore  README.md
client/: package-lock.json  package.json
client/config/: webpack.config.js
client/public/: index.html
client/src/: App.tsx  client.ts  environment.ts  http.ts  index.css  socket.ts
client/src/componentStyles/: styles.ts
client/src/components/: App.tsx
client/src/components/contexts/: AuthProvider.tsx
client/src/components/interface/: InnerSidebar.tsx  LoginButton.tsx  OuterSidebar.tsx  TestLink.tsx  Toolbox.tsx  toolbox.tsx
client/src/components/pages/: LandingPage.tsx  NotFoundPage.tsx  PlayPage.tsx  RegistrationPage.tsx
client/src/components/pixi/: map.ts  playArea.ts  tokens.ts
client/src/components/ui/: Spinner.css  Spinner.tsx
client/src/types/: AuthState.ts  pixi-tween.d.ts
client/src/utilities/: json.ts  url.ts
server/: Cargo.toml  insomnia.json
server/migrations/2021-03-03-215744_create-image/: down.sql  up.sql
server/migrations/2021-03-04-031946_unique-url/: down.sql  up.sql
server/migrations/2021-03-08-211435_user-table/: up.sql
server/migrations/2021-03-08-213925_rename-user_id/: down.sql  up.sql
server/migrations/2021-03-11-221441_session/: down.sql  up.sql
server/migrations/2021-04-08-144146_bigInt-to-int/: down.sql  up.sql
server/src/: db.rs  main.rs  message.rs  models.rs  schema.rs  server.rs
server/src/db/: image.rs  session.rs  user.rs
server/src/message/: client.rs  group.rs  map.rs  roll.rs  token.rs
server/src/models/: image.rs  request.rs  session.rs  user.rs
server/src/server/: endpoint.rs  http.rs  socket.rs
server/src/server/endpoint/: session.rs  user.rs
wasm/: Cargo.toml
wasm/src/: examples  lib.rs
