[package]
name = "server"
version = "0.1.0"
authors = ["Justin Wash <justin.wash@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws = "0.9.1"
serde_json = "1.0"
serde = { version = "1.0.64", features = ["derive"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
mio = "0.7.9"
mio-extras = "2.0"
env_logger = "0.8.3"
time = "0.2.25"
cute-dnd-dice = "4.0.0"
dotenv = "0.15.0"
diesel = { version = "1.4.4", features = ["postgres"] }

# [dev-dependencies]
# clap = "2.31.2"
# term = "0.7.0"