[package]
name = "wasm"
version = "0.1.0"
authors = ["justin wash <justin.wash@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
wasm-bindgen = "0.2.70"
web-sys = "0.3.47"
js-sys = "0.3.47"

[dev-dependencies.web-sys]
version = "0.3.47"
features = [
  'Document',
  'DomTokenList',
  'Element',
  'HtmlElement',
  'HtmlCollection',
  'HtmlCanvasElement',
  'Window',
  'console',
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'MouseEvent',
]